tests/error/01_indent.py
# Using space for indent
# Leading spaces detected at line 1
if True:
    a: int = 1
